# Car-Price-Prediction

./: .gitignore  Car_Price_Prediction_Model.db  car_price_prediction.db  car_price_prediction_EDA  main.py  pyproject.toml
artifacts/encoders/: one_hot_encoder_v1.joblib
artifacts/feature_selection/: selected_feature_names.json
artifacts/models/metrics/: RandomForest_v1.joblib  (+5 more)
artifacts/reports/: Dev_cleaning_report.json  Test_cleaning_report.json  Train_cleaning_report.json  feature_transformations_v1.json
artifacts/results/: data_quality_checks.json  missing_values_summary.csv  numeric_summary.json
artifacts/scalers/: standard_scaler_v1.joblib
config/: eda_config.yaml  evaluation_config.yaml  preprocessing_config.yaml  training_config.yaml
notebooks/: car_price_prediction_EDA  eda.ipynb  eda_preprocessing.ipynb  model_evaluation.ipynb  model_training.ipynb  preprocessing.ipynb
src/api/: __init__.py  config.py  models.py  schemas.py
src/eda/: __init__.py  data_loader.py  data_quality.py  descriptive_stats.py  eda_pipeline.py  stats_inference.py  visualizations.py
src/model_evaluation/: __init__.py  evaluation.py  evaluation_pipeline.py  load_data.py  load_model.py  regression_metrics.py  run_prediction.py
src/model_training/: __init__.py  data_loader.py  hyperparameter_tuner.py  model_trainer.py  training_pipeline.py
src/preprocessing/: __init__.py  data_cleaning.py  data_splitter.py  feature_encoding.py  feature_scaling.py  feature_selection.py  feature_transformation.py  preprocessing_pipeline.py
src/utils/: __init__.py  io_utils.py  mlflow.py
(+7 files in other folders)
