[project]
name = "car-price-prediction-model"
version = "0.1.0"
description = "This is a car price prediction model using various machine learning algorithms."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.53.0",
    "xgboost>=3.1.3",
]
